--- a/index.html
+++ b/index.html
@@ -1,69 +1,199 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Dimercia – Biographie</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #00bfff;
-      text-align: center;
-    }
-    header {
-      padding: 40px 20px;
-      border-bottom: 2px solid #00bfff;
-    }
-    section {
-      padding: 30px 20px;
-      max-width: 800px;
-      margin: auto;
-      border: 1px solid #00bfff;
-      border-radius: 10px;
-      margin-top: 30px;
-    }
-    h1, h2 {
-      color: #00bfff;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-      border: 2px solid #00bfff;
-      margin-top: 15px;
-    }
-    footer {
-      margin: 40px 0;
-      font-size: 14px;
-      color: #aaa;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Biographie - Mutajiri Ngoie Dimercia</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #0d0d0d;
+            color: #f2b6d8;
+            font-family: "Segoe UI", Arial, sans-serif;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 40px 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #ff7eb3;
+            font-size: 42px;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #ff9acb;
+            margin-bottom: 30px;
+        }
+
+        .section {
+            background-color: #1a1a1a;
+            border-radius: 15px;
+            padding: 30px;
+            margin-bottom: 40px;
+            box-shadow: 0 0 20px rgba(255,126,179,0.2);
+        }
+
+        .section h3 {
+            color: #ff7eb3;
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 28px;
+        }
+
+        .photo {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .photo img {
+            width: 260px;
+            height: 260px;
+            object-fit: cover;
+            border-radius: 20px;
+            border: 5px solid #ff7eb3;
+            box-shadow: 0 0 25px rgba(255,126,179,0.4);
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.7;
+            text-align: justify;
+            color: #f7cde2;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 40px;
+            font-size: 14px;
+            color: #888;
+        }
+    </style>
 </head>
+
 <body>
 
-<header>
-  <h1>Dimercia</h1>
-  <p>Biographie officielle</p>
-</header>
+<div class="container">
 
-<section>
-  <h2>À propos</h2>
-  <p>
-    Dimercia est une femme forte, inspirante et déterminée.
-    Son parcours est marqué par le courage, la persévérance
-    et la volonté d’aller toujours plus loin.
-  </p>
-</section>
+    <h1>MUTAJIRI NGOIE DIMERCIA</h1>
+    <h2>Biographie personnelle</h2>
 
-<section>
-  <h2>Galerie</h2>
-  <p>Photos à venir</p>
-  <!-- Tu pourras ajouter des photos ici plus tard -->
-</section>
+    <!-- ENFANCE -->
+    <div class="section">
+        <h3>Enfance</h3>
+        <div class="photo">
+            <img src="petite.jpg" alt="Photo enfance">
+        </div>
+        <p>
+            À l’âge de trois ans, MUTAJIRI NGOIE DIMERCIA manifestait déjà une curiosité marquée
+            et un esprit vif. Décrite par son entourage comme une enfant dynamique et attentive
+            à son environnement, elle a très tôt montré un intérêt naturel pour l’apprentissage
+            et la découverte. Cette période de son enfance a constitué le socle de son développement
+            intellectuel et personnel.
+        </p>
+    </div>
 
-<footer>
-  © 2026 – Site dédié à Dimercia
-</footer>
+    <!-- ADULTE -->
+    <div class="section">
+        <h3>Parcours actuel</h3>
+        <div class="photo">
+            <img src="grande.jpg" alt="Photo adulte">
+        </div>
+        <p>
+            Aujourd’hui, MUTAJIRI NGOIE DIMERCIA est une personne engagée, disciplinée et passionnée
+            par l’apprentissage. Étudiante en année préparatoire à l’Université de Lubumbashi (UNILU),
+            elle aspire à devenir une ingénieure compétente et exemplaire dans le domaine qu’elle a choisi,
+            guidée par la volonté d’excellence et de contribution au développement scientifique.
+        </p>
+    </div>
+
+    <footer>
+        © 2026 • Biographie personnelle
+    </footer>
+
+</div>
 
 </body>
+  <div class="section">
+    <h3>Tableau 16 × 16</h3>
+
+    <div class="table-container">
+        <table class="table16">
+            <!-- 16 lignes -->
+            <!-- Ligne 1 -->
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+
+            <!-- Ligne 2 -->
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+
+            <!-- Ligne 3 à 16 (copiées identiques) -->
+            <!-- Tu peux copier cette ligne jusqu’à avoir 16 lignes -->
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+        </table>
+    </div>
+  </div>
 </html>
