--- a/index.html
+++ b/index.html
@@ -1,199 +1,163 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Biographie - Mutajiri Ngoie Dimercia</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Biographie – MUTAJIRI NGOIE DIMERCIA</title>
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #0d0d0d;
-            color: #f2b6d8;
-            font-family: "Segoe UI", Arial, sans-serif;
-        }
+<style>
+body {
+  margin: 0;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: #0d0d0d;
+  color: #f2f2f2;
+}
 
-        .container {
-            max-width: 900px;
-            margin: auto;
-            padding: 40px 20px;
-        }
+.container {
+  max-width: 900px;
+  margin: auto;
+  padding: 20px;
+}
 
-        h1 {
-            text-align: center;
-            color: #ff7eb3;
-            font-size: 42px;
-            margin-bottom: 10px;
-        }
+h1 {
+  text-align: center;
+  color: #ff5fa2;
+  letter-spacing: 2px;
+}
 
-        h2 {
-            text-align: center;
-            color: #ff9acb;
-            margin-bottom: 30px;
-        }
+h2 {
+  text-align: center;
+  color: #ff8fc4;
+  margin-bottom: 20px;
+}
 
-        .section {
-            background-color: #1a1a1a;
-            border-radius: 15px;
-            padding: 30px;
-            margin-bottom: 40px;
-            box-shadow: 0 0 20px rgba(255,126,179,0.2);
-        }
+.section {
+  background: #151515;
+  border-radius: 20px;
+  padding: 25px;
+  margin: 30px 0;
+  box-shadow: 0 0 25px rgba(255,95,162,0.15);
+}
 
-        .section h3 {
-            color: #ff7eb3;
-            text-align: center;
-            margin-bottom: 20px;
-            font-size: 28px;
-        }
+.photo {
+  width: 220px;
+  height: 220px;
+  margin: 15px auto;
+  border-radius: 18px;
+  border: 2px solid #ff5fa2;
+  box-shadow: 0 0 20px #ff5fa2;
+  overflow: hidden;
+}
 
-        .photo {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
+.photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-        .photo img {
-            width: 260px;
-            height: 260px;
-            object-fit: cover;
-            border-radius: 20px;
-            border: 5px solid #ff7eb3;
-            box-shadow: 0 0 25px rgba(255,126,179,0.4);
-        }
+p {
+  text-align: justify;
+  line-height: 1.7;
+  color: #e6e6e6;
+}
 
-        p {
-            font-size: 18px;
-            line-height: 1.7;
-            text-align: justify;
-            color: #f7cde2;
-        }
+/* TABLEAU 16x16 */
+.table-title {
+  text-align: center;
+  color: #ff5fa2;
+  margin-top: 40px;
+}
 
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            font-size: 14px;
-            color: #888;
-        }
-    </style>
+.table16 {
+  margin: 25px auto;
+  border-collapse: collapse;
+}
+
+.table16 td {
+  width: 22px;
+  height: 22px;
+  border: 1px solid #ff5fa2;
+}
+
+footer {
+  text-align: center;
+  margin-top: 40px;
+  color: #999;
+  font-size: 14px;
+}
+</style>
 </head>
 
 <body>
-
 <div class="container">
 
-    <h1>MUTAJIRI NGOIE DIMERCIA</h1>
-    <h2>Biographie personnelle</h2>
+<h1>MUTAJIRI NGOIE DIMERCIA</h1>
+<h2>Biographie personnelle</h2>
 
-    <!-- ENFANCE -->
-    <div class="section">
-        <h3>Enfance</h3>
-        <div class="photo">
-            <img src="petite.jpg" alt="Photo enfance">
-        </div>
-        <p>
-            À l’âge de trois ans, MUTAJIRI NGOIE DIMERCIA manifestait déjà une curiosité marquée
-            et un esprit vif. Décrite par son entourage comme une enfant dynamique et attentive
-            à son environnement, elle a très tôt montré un intérêt naturel pour l’apprentissage
-            et la découverte. Cette période de son enfance a constitué le socle de son développement
-            intellectuel et personnel.
-        </p>
-    </div>
+<!-- ENFANCE -->
+<div class="section">
+  <h2>Enfance</h2>
 
-    <!-- ADULTE -->
-    <div class="section">
-        <h3>Parcours actuel</h3>
-        <div class="photo">
-            <img src="grande.jpg" alt="Photo adulte">
-        </div>
-        <p>
-            Aujourd’hui, MUTAJIRI NGOIE DIMERCIA est une personne engagée, disciplinée et passionnée
-            par l’apprentissage. Étudiante en année préparatoire à l’Université de Lubumbashi (UNILU),
-            elle aspire à devenir une ingénieure compétente et exemplaire dans le domaine qu’elle a choisi,
-            guidée par la volonté d’excellence et de contribution au développement scientifique.
-        </p>
-    </div>
+  <div class="photo">
+    <img src="enfance.jpg" alt="Photo enfance">
+  </div>
 
-    <footer>
-        © 2026 • Biographie personnelle
-    </footer>
-
+  <p>
+    À l’âge de trois ans, encore inconsciente et ignorante du monde qui
+    m’entourait, j’étais déjà une enfant très curieuse et turbulente.
+    Décrite par mon entourage comme dynamique et attentive, j’aimais
+    découvrir tout ce qui se trouvait autour de moi.  
+    Cette période marque le début de mes premiers pas dans l’apprentissage
+    et constitue le socle de mon développement intellectuel et personnel.
+  </p>
 </div>
 
-</body>
-  <div class="section">
-    <h3>Tableau 16 × 16</h3>
+<!-- PARCOURS ACTUEL -->
+<div class="section">
+  <h2>Parcours actuel</h2>
 
-    <div class="table-container">
-        <table class="table16">
-            <!-- 16 lignes -->
-            <!-- Ligne 1 -->
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-
-            <!-- Ligne 2 -->
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-
-            <!-- Ligne 3 à 16 (copiées identiques) -->
-            <!-- Tu peux copier cette ligne jusqu’à avoir 16 lignes -->
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-            <tr>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            </tr>
-        </table>
-    </div>
+  <div class="photo">
+    <img src="adulte.jpg" alt="Photo adulte">
   </div>
+
+  <p>
+    Aujourd’hui, je suis une personne aimable, disciplinée et passionnée
+    par l’apprentissage. Étudiante en année préparatoire à l’Université
+    de Lubumbashi (UNILU), je m’efforce de donner le meilleur de moi-même
+    dans le parcours que j’ai choisi.  
+    Mon ambition est de devenir une ingénieure compétente et exemplaire,
+    guidée par la volonté d’excellence, de rigueur et de contribution
+    au développement scientifique et technologique.
+  </p>
+</div>
+
+<!-- TABLEAU -->
+<h2 class="table-title">Tableau 16 × 16</h2>
+
+<table class="table16">
+  <!-- 16 lignes -->
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+</table>
+
+<footer>
+  © 2026 • Biographie personnelle
+</footer>
+
+</div>
+</body>
 </html>
