--- a/index.html
+++ b/index.html
@@ -1,163 +1,155 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Biographie – MUTAJIRI NGOIE DIMERCIA</title>
+    <meta charset="UTF-8">
+    <title>MUTAJIRI NGOIE DIMERCIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body {
-  margin: 0;
-  font-family: "Segoe UI", Arial, sans-serif;
-  background: #0d0d0d;
-  color: #f2f2f2;
-}
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background: #0b0b0b;
+            color: #eaeaea;
+        }
 
-.container {
-  max-width: 900px;
-  margin: auto;
-  padding: 20px;
-}
+        h1, h2 {
+            text-align: center;
+            color: #ff5fa2;
+        }
 
-h1 {
-  text-align: center;
-  color: #ff5fa2;
-  letter-spacing: 2px;
-}
+        h1 {
+            margin-top: 30px;
+            letter-spacing: 2px;
+        }
 
-h2 {
-  text-align: center;
-  color: #ff8fc4;
-  margin-bottom: 20px;
-}
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
 
-.section {
-  background: #151515;
-  border-radius: 20px;
-  padding: 25px;
-  margin: 30px 0;
-  box-shadow: 0 0 25px rgba(255,95,162,0.15);
-}
+        .card {
+            background: #141414;
+            border-radius: 16px;
+            padding: 25px;
+            margin: 30px 0;
+            box-shadow: 0 0 20px rgba(255,95,162,0.25);
+        }
 
-.photo {
-  width: 220px;
-  height: 220px;
-  margin: 15px auto;
-  border-radius: 18px;
-  border: 2px solid #ff5fa2;
-  box-shadow: 0 0 20px #ff5fa2;
-  overflow: hidden;
-}
+        .photo-box {
+            width: 220px;
+            height: 220px;
+            margin: 20px auto;
+            border-radius: 20px;
+            overflow: hidden;
+            border: 3px solid #ff5fa2;
+            box-shadow: 0 0 20px #ff5fa2;
+        }
 
-.photo img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+        .photo-box img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
-p {
-  text-align: justify;
-  line-height: 1.7;
-  color: #e6e6e6;
-}
+        p {
+            text-align: justify;
+            line-height: 1.7;
+        }
 
-/* TABLEAU 16x16 */
-.table-title {
-  text-align: center;
-  color: #ff5fa2;
-  margin-top: 40px;
-}
+        /* TABLEAU 16x16 */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
 
-.table16 {
-  margin: 25px auto;
-  border-collapse: collapse;
-}
+        td {
+            border: 1px solid #ff5fa2;
+            height: 25px;
+        }
 
-.table16 td {
-  width: 22px;
-  height: 22px;
-  border: 1px solid #ff5fa2;
-}
-
-footer {
-  text-align: center;
-  margin-top: 40px;
-  color: #999;
-  font-size: 14px;
-}
-</style>
+        footer {
+            text-align: center;
+            margin: 40px 0 20px;
+            color: #888;
+        }
+    </style>
 </head>
-
 <body>
-<div class="container">
 
-<h1>MUTAJIRI NGOIE DIMERCIA</h1>
-<h2>Biographie personnelle</h2>
+    <h1>MUTAJIRI NGOIE DIMERCIA</h1>
+    <h2>Biographie personnelle</h2>
 
-<!-- ENFANCE -->
-<div class="section">
-  <h2>Enfance</h2>
+    <div class="container">
 
-  <div class="photo">
-    <img src="enfance.jpg" alt="Photo enfance">
-  </div>
+        <!-- ENFANCE -->
+        <div class="card">
+            <h2>Enfance</h2>
 
-  <p>
-    À l’âge de trois ans, encore inconsciente et ignorante du monde qui
-    m’entourait, j’étais déjà une enfant très curieuse et turbulente.
-    Décrite par mon entourage comme dynamique et attentive, j’aimais
-    découvrir tout ce qui se trouvait autour de moi.  
-    Cette période marque le début de mes premiers pas dans l’apprentissage
-    et constitue le socle de mon développement intellectuel et personnel.
-  </p>
-</div>
+            <div class="photo-box">
+                <img src="images/enfance.jpg" alt="Photo enfance">
+            </div>
 
-<!-- PARCOURS ACTUEL -->
-<div class="section">
-  <h2>Parcours actuel</h2>
+            <p>
+                À l’époque de mes 3 ans, encore inconsciente et ignorante du monde qui m’entourait,
+                j’étais déjà une enfant très curieuse et turbulente. Décrite par mon entourage
+                comme dynamique et attentive, j’aimais découvrir tout ce qui se trouvait autour
+                de moi. C’est à cette période que mes premiers pas dans l’apprentissage ont commencé,
+                posant ainsi les bases de ma passion actuelle et constituant le socle de mon
+                développement intellectuel et personnel.
+            </p>
+        </div>
 
-  <div class="photo">
-    <img src="adulte.jpg" alt="Photo adulte">
-  </div>
+        <!-- PARCOURS ACTUEL -->
+        <div class="card">
+            <h2>Parcours actuel</h2>
 
-  <p>
-    Aujourd’hui, je suis une personne aimable, disciplinée et passionnée
-    par l’apprentissage. Étudiante en année préparatoire à l’Université
-    de Lubumbashi (UNILU), je m’efforce de donner le meilleur de moi-même
-    dans le parcours que j’ai choisi.  
-    Mon ambition est de devenir une ingénieure compétente et exemplaire,
-    guidée par la volonté d’excellence, de rigueur et de contribution
-    au développement scientifique et technologique.
-  </p>
-</div>
+            <div class="photo-box">
+                <img src="images/adulte.jpg" alt="Photo adulte">
+            </div>
 
-<!-- TABLEAU -->
-<h2 class="table-title">Tableau 16 × 16</h2>
+            <p>
+                Aujourd’hui, je suis une personne aimable, engagée et passionnée par l’apprentissage.
+                J’apprécie les échanges avec mon entourage et je reste motivée à évoluer chaque jour.
+                Ayant choisi un nouveau chemin, j’espère être à la hauteur des défis qui m’attendent
+                et apprendre énormément à l’Université de Lubumbashi (UNILU). Étudiante en année
+                préparatoire, j’aspire à devenir une ingénieure compétente et exemplaire dans le
+                domaine que j’ai choisi.
+            </p>
+        </div>
 
-<table class="table16">
-  <!-- 16 lignes -->
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-  <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-</table>
+        <!-- TABLEAU 16 x 16 -->
+        <div class="card">
+            <h2>Tableau 16 × 16</h2>
 
-<footer>
-  © 2026 • Biographie personnelle
-</footer>
+            <table>
+                <!-- 16 lignes -->
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+            </table>
+        </div>
 
-</div>
+    </div>
+
+    <footer>
+        © 2026 — Biographie personnelle
+    </footer>
+
 </body>
 </html>
