--- a/index.html
+++ b/index.html
@@ -1,155 +1,179 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>MUTAJIRI NGOIE DIMERCIA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Biographie - Mutajiri Ngoie Dimercia</title>
 
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #0b0b0b;
-            color: #eaeaea;
-        }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fff0f6;
+      margin: 0;
+      padding: 0;
+    }
 
-        h1, h2 {
-            text-align: center;
-            color: #ff5fa2;
-        }
+    header {
+      background: #d63384;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
 
-        h1 {
-            margin-top: 30px;
-            letter-spacing: 2px;
-        }
+    section {
+      padding: 30px;
+      max-width: 1000px;
+      margin: auto;
+    }
 
-        .container {
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
-        }
+    h2 {
+      color: #d63384;
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-        .card {
-            background: #141414;
-            border-radius: 16px;
-            padding: 25px;
-            margin: 30px 0;
-            box-shadow: 0 0 20px rgba(255,95,162,0.25);
-        }
+    .photo {
+      width: 260px;
+      border-radius: 20px;
+      border: 4px solid #d63384;
+      display: block;
+      margin: 20px auto;
+      box-shadow: 0 8px 20px rgba(214, 51, 132, 0.3);
+    }
 
-        .photo-box {
-            width: 220px;
-            height: 220px;
-            margin: 20px auto;
-            border-radius: 20px;
-            overflow: hidden;
-            border: 3px solid #ff5fa2;
-            box-shadow: 0 0 20px #ff5fa2;
-        }
+    .biographie {
+      background: white;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      line-height: 1.8;
+      text-align: justify;
+    }
 
-        .photo-box img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    table {
+      border-collapse: collapse;
+      margin: 30px auto;
+    }
 
-        p {
-            text-align: justify;
-            line-height: 1.7;
-        }
+    table td {
+      border: 1px solid #d63384;
+      padding: 10px;
+      width: 40px;
+      height: 40px;
+      text-align: center;
+    }
 
-        /* TABLEAU 16x16 */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
+    .table-rose {
+      background: #ffe6f0;
+      border-radius: 15px;
+      padding: 20px;
+      margin-top: 40px;
+      box-shadow: 0 5px 15px rgba(214, 51, 132, 0.3);
+    }
 
-        td {
-            border: 1px solid #ff5fa2;
-            height: 25px;
-        }
-
-        footer {
-            text-align: center;
-            margin: 40px 0 20px;
-            color: #888;
-        }
-    </style>
+    footer {
+      background: #d63384;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
+
 <body>
 
-    <h1>MUTAJIRI NGOIE DIMERCIA</h1>
-    <h2>Biographie personnelle</h2>
+<header>
+  <h1>Mutajiri Ngoie Dimercia</h1>
+  <p>Biographie personnelle</p>
+</header>
 
-    <div class="container">
+<section>
+  <h2>Photo d’enfance</h2>
+  <img src="IMG-20260119-WA3174.jpg" alt="Photo enfant" class="photo">
+</section>
 
-        <!-- ENFANCE -->
-        <div class="card">
-            <h2>Enfance</h2>
+<section>
+  <h2>Photo à l’âge adulte</h2>
+  <!-- Quand tu uploades la photo adulte, remplace adulte.jpg par son vrai nom -->
+  <img src="adulte.jpg" alt="Photo adulte" class="photo">
+</section>
 
-            <div class="photo-box">
-                <img src="images/enfance.jpg" alt="Photo enfance">
-            </div>
+<section>
+  <h2>Biographie</h2>
+  <div class="biographie">
+    <p>
+      Aujourd’hui, je suis une personne aimable, passionnée et curieuse, qui aime apprendre
+      et apprécie profondément les personnes qui l’entourent.
+    </p>
 
-            <p>
-                À l’époque de mes 3 ans, encore inconsciente et ignorante du monde qui m’entourait,
-                j’étais déjà une enfant très curieuse et turbulente. Décrite par mon entourage
-                comme dynamique et attentive, j’aimais découvrir tout ce qui se trouvait autour
-                de moi. C’est à cette période que mes premiers pas dans l’apprentissage ont commencé,
-                posant ainsi les bases de ma passion actuelle et constituant le socle de mon
-                développement intellectuel et personnel.
-            </p>
-        </div>
+    <p>
+      Pour ce nouveau chemin que j’ai choisi, j’espère être à la hauteur des exigences
+      et acquérir de nombreuses connaissances à l’Université de Lubumbashi.
+    </p>
 
-        <!-- PARCOURS ACTUEL -->
-        <div class="card">
-            <h2>Parcours actuel</h2>
+    <p>
+      Étudiante en classe préparatoire à l’UNILU, je nourris l’ambition de devenir
+      une ingénieure exemplaire dans le domaine que j’ai choisi,
+      guidée par le sérieux, la discipline et l’amour du travail bien fait.
+    </p>
+  </div>
+</section>
 
-            <div class="photo-box">
-                <img src="images/adulte.jpg" alt="Photo adulte">
-            </div>
+<section>
+  <h2>Tableau 16 × 16</h2>
+  <table>
+    <!-- 16 lignes -->
+    <!-- Chaque ligne contient 16 colonnes -->
+    <!-- Ligne 1 -->
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+    <!-- Répété 16 fois -->
+    <!-- Tu peux remplir plus tard si besoin -->
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+  </table>
+</section>
 
-            <p>
-                Aujourd’hui, je suis une personne aimable, engagée et passionnée par l’apprentissage.
-                J’apprécie les échanges avec mon entourage et je reste motivée à évoluer chaque jour.
-                Ayant choisi un nouveau chemin, j’espère être à la hauteur des défis qui m’attendent
-                et apprendre énormément à l’Université de Lubumbashi (UNILU). Étudiante en année
-                préparatoire, j’aspire à devenir une ingénieure compétente et exemplaire dans le
-                domaine que j’ai choisi.
-            </p>
-        </div>
+<section class="table-rose">
+  <h2>Conclusion</h2>
+  <p>
+    Cette page représente mon parcours, mes ambitions et ma vision de l’avenir.
+    Elle symbolise une évolution constante, de l’enfance à l’âge adulte,
+    guidée par le savoir, la détermination et la foi en mes capacités.
+  </p>
+</section>
 
-        <!-- TABLEAU 16 x 16 -->
-        <div class="card">
-            <h2>Tableau 16 × 16</h2>
-
-            <table>
-                <!-- 16 lignes -->
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-            </table>
-        </div>
-
-    </div>
-
-    <footer>
-        © 2026 — Biographie personnelle
-    </footer>
+<footer>
+  © 2026 – Mutajiri Ngoie Dimercia | Tous droits réservés
+</footer>
 
 </body>
 </html>
